Bebida Com Duplicacao

--- a/pizzaria-front/pizzaria-app/src/app/components/bebida/bebidalist/bebidalist.component.html
+++ b/pizzaria-front/pizzaria-app/src/app/components/bebida/bebidalist/bebidalist.component.html
@@ -19,7 +19,7 @@
                         <td> {{ bebida.valorBebida }} </td>
                         <td>
                             <button class="btn btn-primary" (click)="editar(modal1, bebida, i)">Editar</button>
-                            <!--<button class="btn btn-danger" (click)="deletar(bebida.id)">Excluir</button>  BOTAO DE EXCLUIR    -->
+                            <button class="btn btn-danger" (click)="deletar(bebida.id)">Excluir</button>
                         </td>
                     </tr>
                 </tbody>
