--- a/pizzaria-front/pizzaria-app/src/app/components/sistema/login/login.component.html
+++ b/pizzaria-front/pizzaria-app/src/app/components/sistema/login/login.component.html
@@ -8,16 +8,14 @@
         <div class="col-lg-4">
             <form (ngSubmit)="logar()">
                 <div class="mb-3">
-                    <label for="exampleInputText1" class="form-label">Login:
+                    <label for="exampleInputText1" class="form-label">Login:</label>
                     <input type="text" class="form-control" name="exampleInputText1" aria-describedby="emailHelp"
                         [(ngModel)]="usuario.login">
-                    </label>
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Senha:
+                    <label for="exampleInputPassword1" class="form-label">Senha:</label>
                     <input type="password" class="form-control" name="exampleInputPassword1"
                         [(ngModel)]="usuario.senha">
-                    </label>
                 </div>
                 <button type="submit" class="btn btn-primary">Logar</button>
             </form>
