--- a/pizzaria-front/pizzaria-app/src/app/components/layout/header/header.component.html
+++ b/pizzaria-front/pizzaria-app/src/app/components/layout/header/header.component.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/admin/bebidas">Bebidas</a>
+            <a class="nav-link active" aria-current="page" href="/admin/bebida">Bebidas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/login">Sair</a>
