--- a/pizzaria-front/pizzaria-app/src/app/components/layout/header/header.component.html
+++ b/pizzaria-front/pizzaria-app/src/app/components/layout/header/header.component.html
@@ -10,9 +10,12 @@
             <a class="nav-link active" aria-current="page" href="/admin/bebida">Bebidas</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/admin/sabor">Sabores</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/login">Sair</a>
           </li>
         </ul>
       </div>
     </div>
-  </nav>
+</nav>
