--- a/pizzaria-front/pizzaria-app/src/app/components/sabor/saborlist/saborlist.component.html
+++ b/pizzaria-front/pizzaria-app/src/app/components/sabor/saborlist/saborlist.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h3 class="alert alert-primary">Listagem de Bebidas!</h3>
+    <h3 class="alert alert-primary">Listagem de Sabores!</h3>
     <td> <button class="btn btn-primary" (click)="adicionar(modal1)">Adicionar</button> </td>
     <div class="row">
         <div class="col-lg-12">
@@ -8,18 +8,16 @@
                     <tr>
                         <th scope="col">#ID</th>
                         <th scope="col">Nome</th>
-                        <th scope="col">Valor</th>
                         <th scope="col">Ações</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let bebida of lista; let i = index">
-                        <th scope="row">{{ bebida.id }}</th>
-                        <td> {{ bebida.nomeBebida }} </td>
-                        <td> {{ bebida.valorBebida }} </td>
+                    <tr *ngFor="let sabor of lista; let i = index">
+                        <th scope="row">{{ sabor.id }}</th>
+                        <td> {{ sabor.nomeSabor }} </td>
                         <td>
-                            <button class="btn btn-primary" (click)="editar(modal1, bebida, i)">Editar</button>
-                            <button class="btn btn-danger" (click)="deletar(bebida.id)">Excluir</button>
+                            <button class="btn btn-primary" (click)="editar(modal1, sabor, i)">Editar</button>
+                            <button class="btn btn-danger" (click)="deletar(sabor.id)">Excluir</button>
                         </td>
                     </tr>
                 </tbody>
@@ -30,15 +28,14 @@
     </div>
 </div>
 
-
 <ng-template #modal1 let-modal>
     <div class="modal-header">
-        <h4 class="modal-title">Atualizar Bebida</h4>
+        <h4 class="modal-title">Atualizar Sabor</h4>
         <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
     </div>
     <div class="modal-body">
 
-        <app-bebida-details [bebida]="bebidaSelecionadaParaEdicao" (retorno)="addOuEditarBebida($event)"></app-bebida-details>
+        <app-sabordetails [sabor]="saborSelecionadaParaEdicao" (retorno)="addOuEditarSabor($event)"></app-sabordetails>
 
     </div>
     <div class="modal-footer">
