--- a/pizzaria-front/pizzaria-app/src/app/components/layout/header/header.component.html
+++ b/pizzaria-front/pizzaria-app/src/app/components/layout/header/header.component.html
@@ -13,6 +13,9 @@
             <a class="nav-link active" aria-current="page" href="/admin/sabor">Sabores</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/admin/endereco">Enderecos</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/login">Sair</a>
           </li>
         </ul>
