--- a/pizzaria-front/pizzaria-app/src/app/components/layout/header/header.component.html
+++ b/pizzaria-front/pizzaria-app/src/app/components/layout/header/header.component.html
@@ -16,6 +16,9 @@
             <a class="nav-link active" aria-current="page" href="/admin/endereco">Enderecos</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/admin/funcionario">Funcionario</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/login">Sair</a>
           </li>
         </ul>
