--- a/pizzaria-front/pizzaria-app/src/app/components/sabor/saborlist/saborlist.component.html
+++ b/pizzaria-front/pizzaria-app/src/app/components/sabor/saborlist/saborlist.component.html
@@ -19,6 +19,7 @@
                             <button class="btn btn-primary" (click)="editar(modal1, sabor, i)">Editar</button>
                             <button class="btn btn-danger" (click)="deletar(sabor.id)">Excluir</button>
                         </td>
+                        <td *ngIf="modoLancamento"> <button type="button" class="btn btn-primary" (click)="lancamento( sabor)">Lançar</button> </td>
                     </tr>
                 </tbody>
             </table>
