--- a/pizzaria-front/pizzaria-app/src/app/components/layout/header/header.component.html
+++ b/pizzaria-front/pizzaria-app/src/app/components/layout/header/header.component.html
@@ -22,6 +22,9 @@
             <a class="nav-link active" aria-current="page" href="/admin/cliente">Cliente</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/admin/pizza">Pizza</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/login">Sair</a>
           </li>
         </ul>
