fixes in Cliente Back

--- a/pizzaria-front/pizzaria-app/src/app/components/cliente/clientedetails/clientedetails.component.html
+++ b/pizzaria-front/pizzaria-app/src/app/components/cliente/clientedetails/clientedetails.component.html
@@ -39,7 +39,7 @@
     <div class="modal-dialog modal-lg"> <!-- Ajuste o tamanho da modal usando modal-lg -->
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Modal title</h4>
+                <h4 class="modal-title">Detalhes Cliente</h4>
                 <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
             </div>
             <div class="modal-body">
