Produto ganhando forma

--- a/pizzaria-front/pizzaria-app/src/app/components/pizza/pizzalist/pizzalist.component.html
+++ b/pizzaria-front/pizzaria-app/src/app/components/pizza/pizzalist/pizzalist.component.html
@@ -43,7 +43,7 @@
 
 <ng-template #modal1 let-modal>
     <div class="modal-header">
-        <h4 class="modal-title">Detalhes do Pizza</h4>
+        <h4 class="modal-title">Atualizar Pizza</h4>
         <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
     </div>
     <div class="modal-body">
