--- a/pizzaria-front/pizzaria-app/src/app/components/produto/produtolist/produtolist.component.html
+++ b/pizzaria-front/pizzaria-app/src/app/components/produto/produtolist/produtolist.component.html
@@ -5,33 +5,52 @@
         <div class="col-lg-12">
             <table class="table table-striped table-bordered">
                 <thead>
-                    <tr>
-                        <th>#ID</th>
-                        <th>Nome do Produto</th>
-                        <th>Valor</th>
-                        <th>Ações</th>
-                    </tr>
+                  <tr>
+                    <th>#ID</th>
+                    <th>Pizzas</th>
+                    <th>Bebidas</th>
+                    <th>Valor</th>
+                    <th>Ações</th>
+                  </tr>
                 </thead>
                 <tbody>
-                    <!-- Dentro do loop *ngFor para listar os produtos -->
-                    <tr *ngFor="let produto of lista; let i = index">
-                        <th scope="row">{{ produto.id }}</th>
-                        <td>{{ produto.pizzaList }}</td>
-                        <td>{{ produto.valorProduto }}</td>
-                        <td>
-                            <button class="btn btn-primary" (click)="editar(modal1, produto, i)">Editar</button>
-                            <button class="btn btn-danger" (click)="deletar(produto.id)">Excluir</button>
-                        </td>
-                    </tr>
+                  <tr *ngFor="let produto of lista; let i = index">
+                    <td>{{ produto.id }}</td>
+                    <td>
+                      <ul>
+                        <li *ngFor="let pizza of produto.pizzaList">
+                          <ul>
+                            <li *ngFor="let sabor of pizza.sabor">{{ sabor.nomeSabor }} ({{ pizza.valorPizza }})
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </td>
+                    <td>
+                      <ul>
+                        <li *ngFor="let bebida of produto.bebidaList">{{ bebida.nomeBebida }} ({{ bebida.valorBebida }})</li>
+                      </ul>
+                    </td>
+                    <td>{{ produto.valorProduto }}</td>
+                    <td>
+                      <button class="btn btn-primary" (click)="editar(modal1, produto, i)">Editar</button>
+                      <button class="btn btn-danger" (click)="deletar(produto.id)">Excluir</button>
+                    </td>
+                  </tr>
                 </tbody>
-            </table>
+              </table>
+              
+              
+              
         </div>
     </div>
 </div>
 
+
+
 <ng-template #modal1 let-modal>
     <div class="modal-header">
-        <h4 class="modal-title">Atualizar Produto</h4>
+        <h4 class="modal-title">Modal Produto</h4>
         <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
     </div>
     <div class="modal-body">
