--- a/pizzaria-front/pizzaria-app/src/app/components/produto/produtolist/produtolist.component.html
+++ b/pizzaria-front/pizzaria-app/src/app/components/produto/produtolist/produtolist.component.html
@@ -46,7 +46,7 @@
                         <li *ngFor="let bebida of produto.bebidaList">{{ "R$ " + bebida.valorBebida }}</li>
                       </ul>
                     </td>
-                    <td>{{ "R$ " + calcularValorTotal(produto) }}</td>
+                    <td>{{ calcularValorTotal(produto) }}</td>
                     <td>
                       <button class="btn btn-primary" (click)="editar(modal1, produto, i)">Editar</button>
                       <button class="btn btn-danger" (click)="deletar(produto.id)">Excluir</button>
