--- a/pizzaria-front/pizzaria-app/src/app/components/venda/vendadetails/vendadetails.component.html
+++ b/pizzaria-front/pizzaria-app/src/app/components/venda/vendadetails/vendadetails.component.html
@@ -1,1 +1,105 @@
-<p>vendadetails works!</p>
+<form (ngSubmit)="salvar()">
+    <button type="button" class="btn btn-primary" (click)="lancar(modal1)">Lançar Cliente</button>
+    <button type="button" class="btn btn-primary" (click)="lancar(modal2)">Lançar Funcionario</button>
+    <button type="button" class="btn btn-primary" (click)="lancar(modal3)">Lançar Produto</button>
+    <div class="table-responsive">
+        <table class="table table-striped table-sm">
+            <thead>
+                <tr>
+                    <th scope="col">#ID</th>
+                    <th scope="col">Cliente</th>
+                    <th scope="col">Funcionario</th>
+                    <th scope="col">Produto</th>
+                    <th scope="col">Ações</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let clientes of venda.cliente; let i = index">
+                    <td>{{ clientes.id }}</td>
+                    <td>{{ clientes.nome }}</td>
+                    <td>{{ clientes.cpf }}</td>
+                    <td>
+                        <ul>
+                            <li *ngFor="let endereco of clientes.endereco">{{ endereco.bairro }}, {{ endereco.rua }}, {{ endereco.numero }}</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <button (click)="excluirCliente(clientes, i)">Excluir</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</form>
+
+<ng-template #modal1 let-modal>
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Cliente Modal</h4>
+          <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+        </div>
+        <div class="modal-body">
+          <form (ngSubmit)="salvar()">
+            <div class="row">
+              <div class="col-lg-12">
+                <app-clientelist [modoLancamento]="true" (retorno)="retornoClienteList($event)"></app-clientelist>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+              <button type="submit" class="btn btn-primary">Salvar</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </ng-template>
+
+  <ng-template #modal2 let-modal>
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Funcionario Modal</h4>
+          <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+        </div>
+        <div class="modal-body">
+          <form (ngSubmit)="salvar()">
+            <div class="row">
+              <div class="col-lg-12">
+                <app-funcionariolist [modoLancamento]="true" (retorno)="retornoFuncionarioList($event)"></app-funcionariolist>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+              <button type="submit" class="btn btn-primary">Salvar</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </ng-template>
+
+  <ng-template #modal3 let-modal>
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Produto Modal</h4>
+          <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+        </div>
+        <div class="modal-body">
+          <form (ngSubmit)="salvar()">
+            <div class="row">
+              <div class="col-lg-12">
+                <app-produtolist [modoLancamento]="true" (retorno)="retornoProdutoList($event)"></app-produtolist>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+              <button type="submit" class="btn btn-primary">Salvar</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </ng-template>
